deployment/kustomize/base/frontend-deployment.yaml
#  Copyright 2024-2025 Dataport. All rights reserved. Developed as part of the POSSIBLE project.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

---
apiVersion: v1
kind: Service
metadata:
  name: portal-x-frontend-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: main-portal-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-portal-deployment
spec:
  selector:
    matchLabels:
      app: main-portal-frontend
  template:
    metadata:
      labels:
        app: main-portal-frontend
    spec:
      imagePullSecrets:
        - name: github-registry-auth
      containers:
        - name: backend-springboot
          image: main-frontend-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
